Added helper reference to server callback

--- a/views/server_callback.ejs
+++ b/views/server_callback.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<script src="/helper.js"></script>
 	<!-- Salesforce Embedded Log In Config -->
 	<meta name="salesforce-community" content="<%= community_url%>">
 	<meta name="salesforce-mode" content="modal-callback">
