Correct path to helper.js

--- a/views/server_callback.ejs
+++ b/views/server_callback.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="/helper.js"></script>
+	<script src="/public/helper.js"></script>
 	<!-- Salesforce Embedded Log In Config -->
 	<meta name="salesforce-community" content="<%= community_url%>">
 	<meta name="salesforce-mode" content="modal-callback">
@@ -18,7 +18,10 @@
 	<meta name="salesforce-server-callback" content="true">
 
 	<!-- Salesforce Embedded Log In External Files -->
-	<script src="<%= static_asset_url %>" async defer></script></script>
+	<script src="<%= static_asset_url %>" async defer>
+
+	</script>
+
 	<!-- --> 
 
 </head> 
