Update paths to Style and Helper JS

--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -6,11 +6,11 @@
     </title>
 
     <!-- Style -->
-    <link rel="stylesheet" href="/style.css" type="text/css" /> 
+    <link rel="stylesheet" href="/public/style.css" type="text/css" /> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- Visual JS -->
-    <script src="/helper.js"></script>
+    <script src="/public/helper.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jsforce/1.9.1/jsforce.min.js"></script>
 
     <!-- Salesforce Embedded Log In Config -->
