--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,11 +6,11 @@
     </title>
 
     <!-- Style -->
-    <link rel="stylesheet" href="/style.css" type="text/css" /> 
+    <link rel="stylesheet" href="/public/style.css" type="text/css" /> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Visual JS -->
-    <script src="/helper.js"></script>
+    <script src="/public/helper.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jsforce/1.9.1/jsforce.min.js"></script>
 
     <!-- Salesforce Embedded Log In Config -->
